--- a/Fingerprint/Informe.tex
+++ b/Fingerprint/Informe.tex
@@ -6,7 +6,6 @@
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{graphicx}
 \usepackage{grffile}
 \usepackage{longtable}
 \usepackage{wrapfig}
@@ -20,7 +19,7 @@
 \hypersetup{colorlinks=true, linkcolor=black}
 \setlength{\parindent}{0in}
 \usepackage[margin=0.8in]{geometry}
-\usepackage[spanish]{babel}
+\usepackage[english]{babel}
 \usepackage{mathtools}
 \usepackage{palatino}
 \usepackage{fancyhdr}
@@ -30,6 +29,7 @@
 \usepackage{minted}
 \usepackage{cite}
 \usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage{setspace}
 \usepackage[compact]{titlesec}
 \usepackage[center]{caption}
@@ -37,7 +37,6 @@
 \usepackage{color}
 \usepackage{amsmath}
 \usepackage{bm}
-\usepackage{subfigure}
 \usepackage{todonotes}
 \usepackage{pdfpages}
 % \titlespacing*{\subsection}{0pt}{5.5ex}{3.3ex}
@@ -57,24 +56,28 @@
 
 \maketitle
 
-\section{Exercise 1}
+\section*{Exercise 1}
 \textbf{a) } \emph{Copy here the two fingerprint images provided as examples (\texttt{example1\_1} and \texttt{example1\_2})}.
 
-\begin{figure}
+\begin{figure}[h!]
   \centering
-       \begin{subfigure}[b]{0.2\textwidth}
+       \begin{subfigure}[t]{0.45\textwidth}
          \centering
-         \includegraphics[scale=0.3]{example1_1.png}
+         \includegraphics[scale=1.0]{img/example1_1}
          \caption{Example1\_1}
-     \end{subfigure}
-     \begin{subfigure}[b]{0.2\textwidth}
+     \end{subfigure}%
+     \quad
+     \begin{subfigure}[t]{0.45\textwidth}
          \centering
-         \includegraphics[scale=0.3]{example1_2.png}
+         \includegraphics[scale=1.0]{img/example1_2.png}
          \caption{Example1\_2}
      \end{subfigure}
+    \caption{Original fingerprints}
 \end{figure}
 
 \textbf{b) } \emph{How many macro-singularities do you observe in each fingerprint?}
+
+We can see that there is only one macro-singularity in each fingerprint. Specifically, we observe a \textbf{loop} in each one of them.
 
 \textbf{c) } \emph{Mark the macro-singularities in the images (deltas and loops).}
 
@@ -83,6 +86,8 @@
 \textbf{a) }\emph{Execute the provided code for Fingerprint Enhancement and paste the resulting image here:}
 
 \textbf{b) }\emph{What differences do you observe with respect to the original fingerprints?}
+
+Conseguimos continuidad en las crestas papilares.
 
 \section{Exercise 3}
 
