--- a/Face/Informe_P2.tex
+++ b/Face/Informe_P2.tex
@@ -38,10 +38,9 @@
 % \titlespacing*{\section}{0pt}{5.5ex}{1ex}
 \author{Luis Antonio Ortega Andrés\\Antonio Coín Castro}
 \date{}
-\title{Face Biometrics Lab - Report\\\medskip
-\large APRENDIZAJE PROFUNDO PARA PROCESAMIENTO DE INFORMACIÓN BIOMÉTRICA}
+\title{Face Biometrics Lab - Report}
 \hypersetup{
- pdfauthor={Luis Antonio Ortega Andrés},
+ pdfauthor={Luis Antonio Ortega Andrés, Antonio Coín Castro},
  pdftitle={},
  pdfkeywords={},
  pdfsubject={},
